--- a/index.html
+++ b/index.html
@@ -84,18 +84,16 @@
         mood: document.getElementById('mood').value
       };
 
-      fetch('https://script.google.com/macros/s/AKfycbynbu1K_LUgkKeJrpAq662sj6XIBM7RdJARyu3H5PH89FDP2JvFFFFhxIf9XXXNA72_YQ/exec', {
-        method: 'POST',
-        body: JSON.stringify(data),
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      })
+      fetch("https://script.google.com/macros/s/AKfycbynbu1K_LUgkKeJrpAq662sj6XIBM7RdJARyu3H5PH89FDP2JvFFFFhxIf9XXXNA72_YQ/exec", {
+  method: "POST",
+  body: JSON.stringify(data),
+  headers: { "Content-Type": "application/json" },
+})
       .then(response => response.json())
       .then(response => {
         if (response.result === 'success') {
           document.getElementById('responseMessage').innerText =
-            '✅ Thank you! Your grievance has been submitted.';
+            '✅ Thank you! Your grievance has been submitted babyy.Boo boo will get back to you shortly';
           document.getElementById('grievanceForm').reset();
         } else {
           document.getElementById('responseMessage').innerText =
