--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbynbu1K_LUgkKeJrpAq662sj6XIBM7RdJARyu3H5PH89FDP2JvFFFFhxIf9XXXNA72_YQ/exec";
+    const scriptURL = "https://corsproxy.io/?" + encodeURIComponent("https://script.google.com/macros/s/AKfycbynbu1K_LUgkKeJrpAq662sj6XIBM7RdJARyu3H5PH89FDP2JvFFFFhxIf9XXXNA72_YQ/exec");
 
     document.getElementById('grievanceForm').addEventListener('submit', function(e) {
       e.preventDefault();
@@ -84,27 +84,26 @@
         mood: document.getElementById('mood').value
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbynbu1K_LUgkKeJrpAq662sj6XIBM7RdJARyu3H5PH89FDP2JvFFFFhxIf9XXXNA72_YQ/exec", {
-  method: "POST",
-  body: JSON.stringify(data),
-  headers: { "Content-Type": "application/json" },
-})
+      fetch(scriptURL, {
+        method: 'POST',
+        body: JSON.stringify(data),
+        headers: { 'Content-Type': 'application/json' }
+      })
       .then(response => response.json())
       .then(response => {
-        if (response.result === 'success') {
-          document.getElementById('responseMessage').innerText =
-            '✅ Thank you! Your grievance has been submitted babyy.Boo boo will get back to you shortly';
-          document.getElementById('grievanceForm').reset();
-        } else {
-          document.getElementById('responseMessage').innerText =
-            '❌ Submission failed. Please try again.';
-        }
+        document.getElementById('responseMessage').innerText =
+          'Thank you! Your grievance has been submitted my princess.Boo boo will get back to you shortly';
+        document.getElementById('grievanceForm').reset();
       })
       .catch(error => {
         document.getElementById('responseMessage').innerText =
-          '❌ Submission failed. Please try again.';
+          'Oops! Submission failed. Please try again later.';
         console.error('Error!', error.message);
       });
+    });
+  </script>
+</body>
+</html>
     });
   </script>
 </body>
