--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       };
 
       fetch(scriptURL, {
+        mode: 'no cors',
         method: 'POST',
         body: JSON.stringify(data),
         headers: { 'Content-Type': 'application/json' }
