--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <script>
-    const scriptURL = "https://corsproxy.io/?" + encodeURIComponent("https://script.google.com/macros/s/AKfycbwF9DzGb_iU6BMjkacpHNOHrUxDyGRsd_wN_KNwFTAZsmQ7IXK_tyObjg9LXK4tLIPzsQ/exec");
+    fetch("https://script.google.com/macros/s/AKfycbwF9DzGb_iU6BMjkacpHNOHrUxDyGRsd_wN_KNwFTAZsmQ7IXK_tyObjg9LXK4tLIPzsQ/exec");
 
     document.getElementById('grievanceForm').addEventListener('submit', function(e) {
       e.preventDefault();
@@ -104,7 +104,4 @@
   </script>
 </body>
 </html>
-    });
-  </script>
-</body>
-</html>
+    
